// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterContainer expands the advanced filter 1`] = `
<div
  className="filter-component-wrapper"
>
  <BasicFilterContainer
    containsAdvancedFilter={true}
    filterCategories={
      Array [
        Object {
          "code": "Grade",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "7",
              "label": "Grades 3-5",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "56",
              "label": "Grades 6-8",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "960",
              "label": "High School",
            },
          ],
          "label": "Grade",
          "optionType": 3,
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "ELA",
              "label": "English Literacy/ Arts",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Math",
              "label": "Mathematics",
            },
          ],
          "label": "Subjects",
          "optionType": 2,
        },
        Object {
          "code": "TechnologyType",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech1",
              "label": "tech1",
            },
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech2",
              "label": "tech2",
            },
          ],
          "label": "TechType",
          "optionType": 4,
        },
      ]
    }
    handleAdvancedFilterExpand={[Function]}
    onUpdateFilter={[Function]}
  />
</div>
`;

exports[`FilterContainer expands the advanced filter 2`] = `
<div
  className="filter-component-wrapper"
>
  <BasicFilterContainer
    containsAdvancedFilter={true}
    filterCategories={
      Array [
        Object {
          "code": "Grade",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "7",
              "label": "Grades 3-5",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "56",
              "label": "Grades 6-8",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "960",
              "label": "High School",
            },
          ],
          "label": "Grade",
          "optionType": 3,
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "ELA",
              "label": "English Literacy/ Arts",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Math",
              "label": "Mathematics",
            },
          ],
          "label": "Subjects",
          "optionType": 2,
        },
        Object {
          "code": "TechnologyType",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech1",
              "label": "tech1",
            },
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech2",
              "label": "tech2",
            },
          ],
          "label": "TechType",
          "optionType": 4,
        },
      ]
    }
    handleAdvancedFilterExpand={[Function]}
    onUpdateFilter={[Function]}
  />
  <AdvancedFilterContainer
    filterCategories={
      Array [
        Object {
          "code": "Grade",
          "disabled": false,
          "displayAllButton": true,
          "filterOptions": Array [
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "7",
              "label": "Grades 3-5",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "56",
              "label": "Grades 6-8",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "960",
              "label": "High School",
            },
          ],
          "helpText": "Grade Help",
          "isMultiSelect": false,
          "label": "Grade",
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "displayAllButton": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "EL&A",
              "label": "English Literacy & Arts",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Mth",
              "label": "Maths",
            },
          ],
          "helpText": "Subject Help",
          "isMultiSelect": true,
          "label": "Multi",
        },
        Object {
          "code": "Subject",
          "disabled": true,
          "displayAllButton": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Eng",
              "label": "English",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Chem",
              "label": "Chemistry",
            },
          ],
          "helpText": "Subject Help",
          "isMultiSelect": false,
          "label": "Disabled",
        },
        Object {
          "code": "Subject",
          "disabled": true,
          "displayAllButton": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Read",
              "label": "Reading",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Hist",
              "label": "History",
            },
          ],
          "helpText": "Subject Help",
          "isMultiSelect": true,
          "label": "Disabled Multi",
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "displayAllButton": true,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "USh",
              "label": "US History",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Wh",
              "label": "World History",
            },
          ],
          "helpText": "Subject Help",
          "isMultiSelect": true,
          "label": "Multi All",
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "displayAllButton": true,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Calc",
              "label": "Calculus",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Geom",
              "label": "Geometry",
            },
          ],
          "helpText": "Subject Help",
          "isMultiSelect": true,
          "label": "Multi All Disabled",
        },
      ]
    }
    isNested={true}
    onUpdateFilter={[Function]}
  />
</div>
`;

exports[`FilterContainer expands the advanced filter 3`] = `
<div
  className="filter-component-wrapper"
>
  <BasicFilterContainer
    containsAdvancedFilter={true}
    filterCategories={
      Array [
        Object {
          "code": "Grade",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "7",
              "label": "Grades 3-5",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "56",
              "label": "Grades 6-8",
            },
            Object {
              "filterType": "Grade",
              "isSelected": false,
              "key": "960",
              "label": "High School",
            },
          ],
          "label": "Grade",
          "optionType": 3,
        },
        Object {
          "code": "Subject",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "ELA",
              "label": "English Literacy/ Arts",
            },
            Object {
              "filterType": "Subject",
              "isSelected": false,
              "key": "Math",
              "label": "Mathematics",
            },
          ],
          "label": "Subjects",
          "optionType": 2,
        },
        Object {
          "code": "TechnologyType",
          "disabled": false,
          "filterOptions": Array [
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech1",
              "label": "tech1",
            },
            Object {
              "filterType": "TechnologyType",
              "isSelected": false,
              "key": "tech2",
              "label": "tech2",
            },
          ],
          "label": "TechType",
          "optionType": 4,
        },
      ]
    }
    handleAdvancedFilterExpand={[Function]}
    onUpdateFilter={[Function]}
  />
</div>
`;
